# solar-seed

./: .gitignore  CLAUDE.md  LICENSE  PAPER.md  README.md  pyproject.toml  solar-seed  solar-seed.bat
docs/: BACKFILL_ARCHITECTURE.md  hybrid_resolution.md  limitations.md
results/: hypothesis_test_results.json  redundancy_analysis.json  state_space_analysis.json
results/early_warning/: coupling_history.json  monitoring.db  report_20260111_1238.md  report_v2.html
results/exports/: coupling_measurements.csv  flare_events.csv  goes_xray.csv  predictions.csv  solar_wind.csv
results/final/: activity_conditioning.json  activity_conditioning.txt  timescale_comparison.json  timescale_comparison.txt
results/flare/: flare_analysis.json  flare_analysis.txt
results/multichannel/: coupling_matrices.json  coupling_matrices.txt  pair_results.csv  temperature_coupling.txt
results/multichannel_real/: coupling_matrices.json  coupling_matrices.txt  pair_results.csv  temperature_coupling.txt
results/prominence/: double_prominence_comparison.json  prominence_2013-09-13.json
results/real_run/: controls_summary.json  run_metadata.json  spatial_maps.txt  timeseries.csv
results/rotation/: checkpoint.json  coupling_evolution.csv  rotation_analysis.json  rotation_analysis.txt
results/rotation/segments/: 2025-12-01.json  2025-12-02.json  2025-12-03.json  2025-12-04.json  2025-12-05.json  2025-12-06.json  2025-12-07.json  2025-12-08.json  2025-12-09.json  2025-12-10.json  2025-12-11.json  2025-12-14.json  2025-12-15.json  2025-12-16.partial.json  2025-12-17.partial.json  2025-12-19.partial.json  2025-12-20.partial.json  2025-12-21.partial.json  2025-12-22.partial.json  2025-12-23.partial.json  2025-12-24.partial.json  2025-12-25.partial.json  2025-12-27.partial.json  2025-12-28.partial.json  2025-12-29.partial.json  2025-12-31.partial.json  2026-01-02.partial.json
results/stereo/: stereo_validation_2011-02-06.json  stereo_validation_2011-02-06_native.json  stereo_validation_2011-02-06_sync.json  stereo_validation_2025-12-01.json
scripts/: backfill.sh  case_study_figure.py  early_warning.py  figure9_state_space.py  figure_summary.py  generate_pdf.py  monitoring_db.py  prominence_2013-09-13.py  report.py  stereo_prototype.py  stereo_sync_native.py
src/solar_seed/: __init__.py  cli.py  collector.py  control_tests.py  data_loader.py  final_analysis.py  flare_analysis.py  hypothesis_test.py  multichannel.py  mutual_info.py  null_model.py  radial_profile.py  real_run.py  render_sun.py  spatial_analysis.py  visualize.py
src/solar_seed/data_sources/: __init__.py  aia.py  jsoc.py  sdac.py  stereo.py  synoptic.py
src/solar_seed/monitoring/: __init__.py  constants.py  coupling.py  db.py  detection.py  formatting.py  relevance.py  validation.py
src/solar_seed/utils/: __init__.py  time.py
tests/: test_cli.py  test_control_tests.py  test_early_warning.py  test_monitoring_db.py  test_multichannel.py  test_mutual_info.py  test_phase_classification.py  test_radial_profile.py  test_render_sun.py  test_segments.py  test_spatial_analysis.py
