[project]
name = "solar-seed"
version = "0.1.0"
description = "Suche nach Informationsmustern in Sonnenlicht"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.12,<3.14"
authors = [
    { name = "4free", email = "vit@lij.de" }
]
keywords = ["solar", "astrophysics", "information-theory", "mutual-information"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "astropy>=7.2.0",
    "sunpy>=5.0.0",
    "aiapy>=0.10.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
solar-seed = "solar_seed.cli:main"

[project.urls]
Homepage = "https://github.com/lubeschanin/solar-seed"
Documentation = "https://github.com/lubeschanin/solar-seed#readme"
Repository = "https://github.com/lubeschanin/solar-seed.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_seed"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
